[core] Fix tabs controls wrapping on smaller screens

--- a/src/components/Tabs/Tabs.styles.less
+++ b/src/components/Tabs/Tabs.styles.less
@@ -17,6 +17,7 @@
   cursor: pointer;
   user-select: none;
   transition: transform 100ms ease;
+  white-space: nowrap;
 
   &:hover {
     background-color: @oc-gray-0;
